force-app/main/default/objects/Contact/fields/Facilitator_Status__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Status__c</fullName>
    <label>Facilitator Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Background Check In progress</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Not Considering</fullName>
            </value>
            <value>
                <fullName>Not Ready</fullName>
            </value>
            <value>
                <fullName>Not Selected</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Provisionally Active</fullName>
            </value>
            <value>
                <fullName>Provisionally Selected</fullName>
            </value>
            <value>
                <fullName>Scheduled Interview</fullName>
            </value>
            <value>
                <fullName
                >Training Course and Workshop Pending Completion</fullName>
                <label>Training Course and Workshop Pending Completion</label>
            </value>
            <value>
                <fullName>Workshop Pending Completion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>