force-app/main/default/objects/Contact/fields/FacilitatorApplicationReceived__c.field-meta.xml
<CustomField>
    <fullName>FacilitatorApplicationReceived__c</fullName>
    <description
    >The date the most recent version of Team Facilitator Application was uploaded</description>
    <label>Last Facilitator Application</label>
    <type>Date</type>
</CustomField>