force-app/main/default/objects/Contact/fields/FacilitatorCertAgreementReceived__c.field-meta.xml
<CustomField>
    <fullName>FacilitatorCertAgreementReceived__c</fullName>
    <description>The date the most recent version of Team Facilitator Certification Agreement was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last Facilitator Certification Agreement</label>
    <type>Date</type>
</CustomField>