force-app/main/default/objects/Contact/fields/FacilitatorCertValidUntil__c.field-meta.xml
<CustomField>
    <fullName>FacilitatorCertValidUntil__c</fullName>
    <description>The date the Facilitator Certification is valid to</description>
    <label>Facilitator Certification Valid Until</label>
    <type>Date</type>
</CustomField>