force-app/main/default/objects/Contact/fields/FacilitatorContactFormReceived__c.field-meta.xml
<CustomField>
    <fullName>FacilitatorContactFormReceived__c</fullName>
    <description
    >The date the most recent version of Team Facilitator ContactForm was uploaded</description>
    <label>Last Facilitator ContactForm</label>
    <type>Date</type>
</CustomField>