force-app/main/default/objects/Contact/fields/FacilitatorFirstAidReceived__c.field-meta.xml
<CustomField>
    <fullName>FacilitatorFirstAidReceived__c</fullName>
    <description>The date the most recent version of Team Facilitator First Aid Certification was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last Facilitator First Aid Certificate</label>
    <type>Date</type>
</CustomField>