force-app/main/default/objects/Contact/fields/FacilitatorInfrNoticeReceived__c.field-meta.xml
<CustomField>
    <fullName>FacilitatorInfrNoticeReceived__c</fullName>
    <description
    >The date the most recent version of Team Facilitator Infraction Notice was uploaded</description>
    <label>Last Facilitator Infraction Notice</label>
    <type>Date</type>
</CustomField>