force-app/main/default/objects/Contact/fields/FacilitatorInitialCertificationDate__c.field-meta.xml
<CustomField>
    <fullName>FacilitatorInitialCertificationDate__c</fullName>
    <description>Date that the Facilitator was first certified.</description>
    <label>Facilitator Initial Certification Date</label>
    <type>Date</type>
</CustomField>