force-app/main/default/objects/Contact/fields/FacilitatorInterviewNotes__c.field-meta.xml
<CustomField>
    <fullName>FacilitatorInterviewNotes__c</fullName>
    <label>Facilitator Interview Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>