force-app/main/default/objects/Contact/fields/FacilitatorPracticumReceived__c.field-meta.xml
<CustomField>
    <fullName>FacilitatorPracticumReceived__c</fullName>
    <description
    >The date the most recent version of Team Facilitator Practicum was uploaded</description>
    <label>Last Facilitator Practicum</label>
    <type>Date</type>
</CustomField>