force-app/main/default/objects/Contact/fields/FacilitatorProfGrowthPlanReceived__c.field-meta.xml
<CustomField>
    <fullName>FacilitatorProfGrowthPlanReceived__c</fullName>
    <description>The date the most recent version of Team Facilitator Professional Growth Plan was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last Facilitator Prof Growth Plan</label>
    <type>Date</type>
</CustomField>