force-app/main/default/objects/Contact/fields/FacilitatorProgAgreementReceived__c.field-meta.xml
<CustomField>
    <fullName>FacilitatorProgAgreementReceived__c</fullName>
    <description>The date the most recent version of Team Facilitator Program Agreement was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last Facilitator Program Agreement</label>
    <type>Date</type>
</CustomField>