force-app/main/default/objects/Contact/fields/FacilitatorReferenceReceived__c.field-meta.xml
<CustomField>
    <fullName>FacilitatorReferenceReceived__c</fullName>
    <description
    >The date the most recent version of Team Facilitator Reference Letter was uploaded</description>
    <label>Last Facilitator Reference Letter</label>
    <type>Date</type>
</CustomField>