force-app/main/default/objects/Contact/fields/First_Name_EC__c.field-meta.xml
<CustomField>
    <fullName>First_Name_EC__c</fullName>
    <description>First name for their emergency contact</description>
    <label>First Name (EC)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>