force-app/main/default/objects/Contact/fields/FirstAidReceived__c.field-meta.xml
<CustomField>
    <fullName>FirstAidReceived__c</fullName>
    <description>The date the most recent version of First Aid Certification was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last First Aid Certificate</label>
    <type>Date</type>
</CustomField>