force-app/main/default/objects/Contact/fields/FirstAidValidUntil__c.field-meta.xml
<CustomField>
    <fullName>FirstAidValidUntil__c</fullName>
    <description>The date the First Aid Certification is valid until</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>First Aid Certificate Valid Until</label>
    <type>Date</type>
</CustomField>