force-app/main/default/objects/Contact/fields/GenderIdentity__c.field-meta.xml
<CustomField>
    <fullName>GenderIdentity__c</fullName>
    <label>Gender Identity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Woman/female</fullName>
            </value>
            <value>
                <fullName>Transgender woman/female</fullName>
            </value>
            <value>
                <fullName>Man/male</fullName>
            </value>
            <value>
                <fullName>Transgender man/male</fullName>
            </value>
            <value>
                <fullName>Non-binary/gender queer</fullName>
            </value>
            <value>
                <fullName>Agender</fullName>
            </value>
            <value>
                <fullName>Prefer to self-describe</fullName>
            </value>
            <value>
                <fullName>Prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>