force-app/main/default/objects/Contact/fields/Handler_City__c.field-meta.xml
<CustomField>
    <fullName>Handler_City__c</fullName>
    <label>Handler City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>