force-app/main/default/objects/Contact/fields/Handler_Country__c.field-meta.xml
<CustomField>
    <fullName>Handler_Country__c</fullName>
    <label>Handler Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>