force-app/main/default/objects/Contact/fields/Handler_Email__c.field-meta.xml
<CustomField>
    <fullName>Handler_Email__c</fullName>
    <label>Handler Email</label>
    <type>Email</type>
</CustomField>