force-app/main/default/objects/Contact/fields/Handler_First_NAme__c.field-meta.xml
<CustomField>
    <fullName>Handler_First_NAme__c</fullName>
    <label>Handler First NAme</label>
    <length>100</length>
    <type>Text</type>
</CustomField>