force-app/main/default/objects/Contact/fields/Handler_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Handler_Home_Phone__c</fullName>
    <label>Handler Home Phone</label>
    <type>Phone</type>
</CustomField>