force-app/main/default/objects/Contact/fields/Handler_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Handler_Last_Name__c</fullName>
    <label>Handler Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>