force-app/main/default/objects/Contact/fields/Handler_Mailing_Address2__c.field-meta.xml
<CustomField>
    <fullName>Handler_Mailing_Address2__c</fullName>
    <label>Handler Mailing  Address2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>