force-app/main/default/objects/Contact/fields/Handler_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Handler_Mailing_City__c</fullName>
    <label>Handler Mailing  City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>