force-app/main/default/objects/Contact/fields/Handler_Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Handler_Mailing_State__c</fullName>
    <label>Handler Mailing  State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>