force-app/main/default/objects/Contact/fields/Handler_MI__c.field-meta.xml
<CustomField>
    <fullName>Handler_MI__c</fullName>
    <label>Handler MI</label>
    <length>10</length>
    <type>Text</type>
</CustomField>