force-app/main/default/objects/Contact/fields/Handler_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Handler_Mobile_Phone__c</fullName>
    <label>Handler Mobile Phone</label>
    <type>Phone</type>
</CustomField>