force-app/main/default/objects/Contact/fields/Handler_Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>Handler_Other_Phone__c</fullName>
    <label>Handler Other Phone</label>
    <type>Phone</type>
</CustomField>