force-app/main/default/objects/Contact/fields/Handler_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Handler_Suffix__c</fullName>
    <label>Handler Suffix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>