force-app/main/default/objects/Contact/fields/Handler_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Handler_Zip_Code__c</fullName>
    <label>Handler Zip Code</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>