force-app/main/default/objects/Contact/fields/How_they_heard_about_Atlas__c.field-meta.xml
<CustomField>
    <fullName>How_they_heard_about_Atlas__c</fullName>
    <label>How they heard about Atlas</label>
    <length>250</length>
    <type>Text</type>
</CustomField>