force-app/main/default/objects/Contact/fields/Interview_Date_for_Board__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date_for_Board__c</fullName>
    <label>Interview Date for Board</label>
    <type>Date</type>
</CustomField>