force-app/main/default/objects/Contact/fields/IsBoardMember__c.field-meta.xml
<CustomField>
    <fullName>IsBoardMember__c</fullName>
    <formula>INCLUDES(Positions__c, &apos;Board Member&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Board Member</label>
    <type>Checkbox</type>
</CustomField>