force-app/main/default/objects/Contact/fields/IsClient__c.field-meta.xml
<CustomField>
    <fullName>IsClient__c</fullName>
    <formula>INCLUDES(Positions__c, &apos;Client&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Client</label>
    <type>Checkbox</type>
</CustomField>