force-app/main/default/objects/Contact/fields/IsPuppyRaiser__c.field-meta.xml
<CustomField>
    <fullName>IsPuppyRaiser__c</fullName>
    <formula>INCLUDES(Positions__c, &apos;Puppy Raiser&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Puppy Raiser</label>
    <type>Checkbox</type>
</CustomField>