force-app/main/default/objects/Contact/fields/IsStaff__c.field-meta.xml
<CustomField>
    <fullName>IsStaff__c</fullName>
    <formula>INCLUDES(Positions__c, &apos;Staff&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Staff</label>
    <type>Checkbox</type>
</CustomField>