force-app/main/default/objects/Contact/fields/IsStandalone__c.field-meta.xml
<CustomField>
    <fullName>IsStandalone__c</fullName>
    <formula>INCLUDES(Positions__c, &apos;Standalone&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Standalone</label>
    <type>Checkbox</type>
</CustomField>