force-app/main/default/objects/Contact/fields/IsTeamFacilitator__c.field-meta.xml
<CustomField>
    <fullName>IsTeamFacilitator__c</fullName>
    <formula>OR(INCLUDES(Positions__c, &apos;Team Facilitator&apos;), INCLUDES(Positions__c, &apos;Team Facilitator Lead&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Team Facilitator</label>
    <type>Checkbox</type>
</CustomField>