force-app/main/default/objects/Contact/fields/IsTrainer__c.field-meta.xml
<CustomField>
    <fullName>IsTrainer__c</fullName>
    <formula>INCLUDES(Positions__c, &apos;Trainer&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Trainer</label>
    <type>Checkbox</type>
</CustomField>