force-app/main/default/objects/Contact/fields/IsTSiM__c.field-meta.xml
<CustomField>
    <fullName>IsTSiM__c</fullName>
    <formula>INCLUDES(Positions__c, &apos;TSiM&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is TSiM</label>
    <type>Checkbox</type>
</CustomField>