force-app/main/default/objects/Contact/fields/IsVolunteer__c.field-meta.xml
<CustomField>
    <fullName>IsVolunteer__c</fullName>
    <formula>INCLUDES(Positions__c, &apos;Volunteer&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Volunteer</label>
    <type>Checkbox</type>
</CustomField>