force-app/main/default/objects/Contact/fields/Last_Name_EC__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_EC__c</fullName>
    <description>Last name for their emergency contact</description>
    <label>Last Name (EC)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>