force-app/main/default/objects/Contact/fields/LastBoardTermStartDate__c.field-meta.xml
<CustomField>
    <fullName>LastBoardTermStartDate__c</fullName>
    <description>Board member&apos;s start date for their most recent term</description>
    <label>Last Board Term Start Date</label>
    <type>Date</type>
</CustomField>