force-app/main/default/objects/Contact/fields/Lead_Comments__c.field-meta.xml
<CustomField>
    <fullName>Lead_Comments__c</fullName>
    <label>Lead Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>