force-app/main/default/objects/Contact/fields/Lead_Facilitator_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Facilitator_Status__c</fullName>
    <label>Lead Facilitator Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Background Check In progress</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Not Considering</fullName>
            </value>
            <value>
                <fullName>Not Ready</fullName>
            </value>
            <value>
                <fullName>Not Selected</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Provisionally Active</fullName>
            </value>
            <value>
                <fullName>Provisionally Selected</fullName>
            </value>
            <value>
                <fullName>Scheduled Interview</fullName>
            </value>
            <value>
                <fullName
                >Training Course and Workshop Pending Completion</fullName>
                <label>Training Course and Workshop Pending Completion</label>
            </value>
            <value>
                <fullName>Workshop Pending Completion</fullName>
            </value>
            <value>
                <fullName>Account Provisioning requested</fullName>
                <isActive>false</isActive>
                <label>Account Provisioning requested</label>
            </value>
            <value>
                <fullName>Delayed onboarding</fullName>
                <isActive>false</isActive>
                <label>Delayed onboarding</label>
            </value>
            <value>
                <fullName>Initial Inquiry</fullName>
                <isActive>false</isActive>
                <label>Initial Inquiry</label>
            </value>
            <value>
                <fullName>Not interested</fullName>
                <isActive>false</isActive>
                <label>Not interested</label>
            </value>
            <value>
                <fullName>Onboarding Failed</fullName>
                <isActive>false</isActive>
                <label>Onboarding Failed</label>
            </value>
            <value>
                <fullName
                >Onboarding aborted - Background Check failed</fullName>
                <isActive>false</isActive>
                <label>Onboarding aborted - Background Check failed</label>
            </value>
            <value>
                <fullName>Training in progress</fullName>
                <isActive>false</isActive>
                <label>Training in progress</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>