force-app/main/default/objects/Contact/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description>How did you hear about us?</description>
    <label>Lead Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Source</valueSetName>
    </valueSet>
</CustomField>