force-app/main/default/objects/Contact/fields/LeadFacilitatorStatus__c.field-meta.xml
<CustomField>
    <fullName>LeadFacilitatorStatus__c</fullName>
    <label>Lead Facilitator Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>