force-app/main/default/objects/Contact/fields/LeadInterest__c.field-meta.xml
<CustomField>
    <fullName>LeadInterest__c</fullName>
    <description>What are you interested in?</description>
    <label>Lead Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LeadInterest</valueSetName>
    </valueSet>
</CustomField>