force-app/main/default/objects/Contact/fields/LeadSourceOther__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceOther__c</fullName>
    <description>Alternate lead source</description>
    <label>Lead Source Other</label>
    <length>120</length>
    <type>Text</type>
</CustomField>