force-app/main/default/objects/Contact/fields/MediaAgreementReceived__c.field-meta.xml
<CustomField>
    <fullName>MediaAgreementReceived__c</fullName>
    <description>The date the most recent version of Media Agreement was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last Media Agreement</label>
    <type>Date</type>
</CustomField>