force-app/main/default/objects/Contact/fields/npo02__OppAmountThisYearHH__c.field-meta.xml
<CustomField>
    <fullName>npo02__OppAmountThisYearHH__c</fullName>
    <description>Formula:  Total Gifts This Year on related Household.</description>
    <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;, 
Account.npo02__OppAmountThisYear__c,
npo02__Household__r.npo02__OppAmountThisYear__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula:  Total Gifts This Year on related Household.</inlineHelpText>
    <label>Total Household Gifts This Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>